Wed Aug  7 07:46:23 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/utils.rb: [DOC] RSS::Utils by Steve Klabnik [Bug #8745]

Wed Aug  7 07:38:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz16): Removed.
	  (nlz32): Ditto.
	  (nlz64): Ditto.
	  (nlz128): Ditto.
	  (nlz_int): New function.
	  (nlz_long): New function.
	  (nlz_long_long): New function.
	  (nlz_int128): New function.
	  (nlz): Follow above changes.
	  (bitsize): Follow above changes.

Tue Aug  6 22:38:15 2013  Zachary Scott  <e@zzak.io>

	* time.c: [DOC] Typo in Time overview by @sparr [Fixes GH-374]
	  https://github.com/ruby/ruby/pull/374

Tue Aug  6 22:35:32 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/1.0.rb: [DOC] Document RSS10 by Steve Klabnik [Bug #8740]

Tue Aug  6 22:14:11 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (readline_s_delete_text): remove
	  checking "$SAFE == 4".

	* ext/readline/readline.c: fix rdoc, remove "Raises SecurityError"
	  and add "Raises NotImplementedError".

Tue Aug  6 22:04:38 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c, test/readline/test_readline.rb: fix
	  indent.

Tue Aug  6 21:59:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_last): return nil for empty range, or in the case the
	  predecessor is smaller than the begin.  [Bug #8739]

Tue Aug  6 21:48:31 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (readline_s_set_point, Init_readline):
	  add Readline.point=(pos). Patched by naruse.  [ruby-dev:47535]
	  [Feature #8675]

Tue Aug  6 21:14:11 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (Init_readline, readline_s_set_output)
	(clear_rl_outstream, readline_s_set_input, clear_rl_instream)
	(readline_readline): fix causing SEGV if closed IO object that is
	  set Readline.input or Readline.output. Patched by akr
	  [ruby-dev:47509] [Bug #8644]

Tue Aug  6 17:56:40 2013  Koichi Sasada  <ko1@atdot.net>
